<resources>
    <string name="app_name">Pig Dice Rolling Game</string>
    <string name="you">YOU</string>
    <string name="pig">PIG</string>
    <string name="computer">COMPUTER</string>
    <string name="games_won">Games Won</string>
    <string name="total_score">Total Score</string>
    <string name="turn_total">Turn Total</string>
    <string name="dice_total">Dice Total</string>
    <string name="roll">ROLL</string>
    <string name="hold">HOLD</string>
    <string name="left_dice_image">Left Dice Image</string>
    <string name="right_dice_image">Right Dice Image</string>
    <string name="loser_image">Loser Image</string>
    <string name="trophy_image">Trophy Image</string>
    <string name="player_games_value">0</string>
    <string name="player_total_score_value">0</string>
    <string name="player_turn_total_value">0</string>
    <string name="computer_games_value">0</string>
    <string name="computer_total_score_value">0</string>
    <string name="computer_turn_total_value">0</string>
    <string name="current_roll_value">0</string>
    <string name="show_leaderboard">Show Leader Board</string>
    <string name="play_game">Play Game</string>
    <string name="pig_leaderboard">PIG Leader Board</string>
    <string name="leaderboard_view">Leader Board View</string>
    <string name="text_view">TEXT VIEW</string>
</resources>